re-adds some list styling that was necessary for correct spacing

--- a/style/index.scss
+++ b/style/index.scss
@@ -37,6 +37,10 @@ body {
         padding: size.$space-400 size.$space-500
     }
 
+    > img {
+        width: 100%;
+    }
+
     & > section {
         display: flex;
         flex-direction: column;
@@ -52,9 +56,7 @@ body {
         list-style-position: inside;
     }
 
-    > img {
-        width: 100%;
-    }
+    
 }
 
 .introduction {
@@ -78,12 +80,12 @@ body {
         @include type.preset-4;
     
         > li {
-            > span {
-                font-weight: bold;
-            }
-
             &::marker {
                 color: color.$rose-800;
+            }
+            > span {
+                @include type.preset-4--bold;
+                color: color.$stone-600;
             }
         } 
     }
@@ -103,7 +105,13 @@ body {
     > ol {
         > li {
             &::marker {
+                @include type.preset-4--bold;
                 color: color.$brown-800;
+            }
+
+            > span {
+                @include type.preset-4--bold;
+                color: color.$stone-600;
             }
         }
     }
